import pytest
from syrupy.assertion import SnapshotAssertion

from sparv_statistics import suc_msd

SUC_MSD_FREQ: dict[str, int] = {
    "AB": 70456,
    "AB.AN": 22440,
    "AB.KOM": 8987,
    "AB.POS": 15452,
    "AB.SUV": 3889,
    "DT.MAS.SIN.DEF": 1,
    "DT.NEU.SIN.DEF": 9677,
    "DT.NEU.SIN.IND": 19816,
    "DT.NEU.SIN.IND+DEF": 144,
    "DT.UTR+NEU.PLU.DEF": 14188,
    "DT.UTR+NEU.PLU.IND": 1026,
    "DT.UTR+NEU.PLU.IND+DEF": 2269,
    "DT.UTR+NEU.SIN+PLU.IND": 1170,
    "DT.UTR+NEU.SIN.DEF": 6,
    "DT.UTR+NEU.SIN.IND": 834,
    "DT.UTR.SIN.DEF": 17851,
    "DT.UTR.SIN.IND": 34408,
    "DT.UTR.SIN.IND+DEF": 241,
    "HA": 13218,
    "HD.NEU.SIN.IND": 164,
    "HD.UTR+NEU.PLU.IND": 823,
    "HD.UTR.SIN.IND": 420,
    "HP.-.-.-": 40259,
    "HP.NEU.SIN.IND": 3996,
    "HP.UTR+NEU.PLU.IND": 205,
    "HP.UTR.SIN.IND": 262,
    "HS.DEF": 186,
    "IE": 45393,
    "IN": 840,
    "JJ.AN": 20,
    "JJ.KOM.UTR+NEU.SIN+PLU.IND+DEF.NOM": 10870,
    "JJ.POS.MAS.SIN.DEF.GEN": 95,
    "JJ.POS.MAS.SIN.DEF.NOM": 268,
    "JJ.POS.NEU.SIN.IND+DEF.NOM": 375,
    "JJ.POS.NEU.SIN.IND.NOM": 17527,
    "JJ.POS.UTR+NEU.PLU.IND+DEF.GEN": 230,
    "JJ.POS.UTR+NEU.PLU.IND+DEF.NOM": 43460,
    "JJ.POS.UTR+NEU.PLU.IND.NOM": 4953,
    "JJ.POS.UTR+NEU.SIN+PLU.IND+DEF.NOM": 3307,
    "JJ.POS.UTR+NEU.SIN.DEF.GEN": 29,
    "JJ.POS.UTR+NEU.SIN.DEF.NOM": 16664,
    "JJ.POS.UTR.SIN.IND+DEF.NOM": 430,
    "JJ.POS.UTR.SIN.IND.NOM": 31584,
    "JJ.SUV.MAS.SIN.DEF.NOM": 1,
    "JJ.SUV.UTR+NEU.PLU.DEF.NOM": 187,
    "JJ.SUV.UTR+NEU.PLU.IND.NOM": 28,
    "JJ.SUV.UTR+NEU.SIN+PLU.DEF.NOM": 2228,
    "JJ.SUV.UTR+NEU.SIN+PLU.IND.NOM": 296,
    "KN": 117948,
    "KN.AN": 24,
    "MAD": 131026,
    "MID": 101646,
    "NN.-.-.-.-": 206,
    "NN.AN": 37351,
    "NN.NEU.PLU.DEF.GEN": 864,
    "NN.NEU.PLU.DEF.NOM": 12372,
    "NN.NEU.PLU.IND.GEN": 1057,
    "NN.NEU.PLU.IND.NOM": 43022,
    "NN.NEU.SIN.DEF.GEN": 7186,
    "NN.NEU.SIN.DEF.NOM": 59061,
    "NN.NEU.SIN.IND.GEN": 699,
    "NN.NEU.SIN.IND.NOM": 110212,
    "NN.UTR.-.-.-": 199,
    "NN.UTR.-.-.SMS": 4845,
    "NN.UTR.PLU.DEF.GEN": 3430,
    "NN.UTR.PLU.DEF.NOM": 25975,
    "NN.UTR.PLU.IND.GEN": 3134,
    "NN.UTR.PLU.IND.NOM": 101252,
    "NN.UTR.SIN.DEF.GEN": 14776,
    "NN.UTR.SIN.DEF.NOM": 123357,
    "NN.UTR.SIN.IND.GEN": 2338,
    "NN.UTR.SIN.IND.NOM": 185208,
    "PAD": 93999,
    "PC.PRF.MAS.SIN.DEF.GEN": 18,
    "PC.PRF.MAS.SIN.DEF.NOM": 41,
    "PC.PRF.NEU.SIN.IND.NOM": 5665,
    "PC.PRF.UTR+NEU.PLU.IND+DEF.GEN": 12,
    "PC.PRF.UTR+NEU.PLU.IND+DEF.NOM": 13568,
    "PC.PRF.UTR+NEU.SIN.DEF.NOM": 2723,
    "PC.PRF.UTR.SIN.IND.NOM": 9691,
    "PC.PRS.UTR+NEU.SIN+PLU.IND+DEF.NOM": 15494,
    "PL": 15486,
    "PM.GEN": 3258,
    "PM.NOM": 102747,
    "PM.SMS": 10,
    "PN.MAS.SIN.DEF.SUB+OBJ": 31,
    "PN.NEU.SIN.DEF.SUB+OBJ": 45180,
    "PN.NEU.SIN.IND.SUB+OBJ": 2581,
    "PN.UTR+NEU.PLU.DEF.OBJ": 1393,
    "PN.UTR+NEU.PLU.DEF.SUB": 3700,
    "PN.UTR+NEU.PLU.DEF.SUB+OBJ": 558,
    "PN.UTR+NEU.PLU.IND.SUB+OBJ": 2621,
    "PN.UTR+NEU.SIN+PLU.DEF.OBJ": 11049,
    "PN.UTR.PLU.DEF.OBJ": 1022,
    "PN.UTR.PLU.DEF.SUB": 11788,
    "PN.UTR.SIN.DEF.OBJ": 840,
    "PN.UTR.SIN.DEF.SUB": 8164,
    "PN.UTR.SIN.DEF.SUB+OBJ": 3143,
    "PN.UTR.SIN.IND.SUB": 4040,
    "PN.UTR.SIN.IND.SUB+OBJ": 1931,
    "PP": 358838,
    "PP.AN": 10,
    "PS.NEU.SIN.DEF": 2345,
    "PS.UTR+NEU.PLU.DEF": 1976,
    "PS.UTR+NEU.SIN+PLU.DEF": 1418,
    "PS.UTR.SIN.DEF": 3894,
    "RG.NOM": 180310,
    "RG.SMS": 11,
    "RG.UTR.SIN.IND.NOM": 1,
    "RO.MAS.SIN.IND+DEF.NOM": 5,
    "RO.NOM": 2892,
    "SN": 53560,
    "UO": 2274,
    "VB.AN": 28,
    "VB.IMP.AKT": 1765,
    "VB.INF.AKT": 95313,
    "VB.INF.SFO": 19930,
    "VB.KON.PRS.AKT": 44,
    "VB.KON.PRT.AKT": 118,
    "VB.PRS.AKT": 184442,
    "VB.PRS.SFO": 35885,
    "VB.PRT.AKT": 19251,
    "VB.PRT.SFO": 3293,
    "VB.SUP.AKT": 14926,
    "VB.SUP.SFO": 5290,
}


@pytest.mark.parametrize("msd", list(SUC_MSD_FREQ))
def test_parse(msd: str, snapshot: SnapshotAssertion) -> None:
    answer = suc_msd.parse(msd)

    assert answer == snapshot
